Check no rounding (need more specific value)

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     
     <legend>Rounding options:</legend>
     <div>
-      <input type="radio" id="roundingNone" name="rounding" value="none" >
+      <input type="radio" id="roundingNone" name="rounding" value="none" checked>
       <label for="roundingNone">No rounding</label>
       <br>
       <input type="radio" id="roundingMedium" name="rounding" value="hz" >
       <label for="roundingMedium">Round to nearest Hz</label>
       <br>
-      <input type="radio" id="roundingHard" name="rounding" value="note" checked>
+      <input type="radio" id="roundingHard" name="rounding" value="note" >
       <label for="roundingHard">Round to nearest note</label>
       <br>
     </div>
