Change default button to smoothingMedium

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
     <legend>Smoothing options:</legend>
     <div>
-      <input
-        type="radio"
-        id="smoothingNone"
-        name="smoothing"
-        value="none"
-        checked
-      />
+      <input type="radio" id="smoothingNone" name="smoothing" value="none" />
       <label for="smoothingNone">No smoothing</label>
       <br />
-      <input type="radio" id="smoothingMedium" name="smoothing" value="basic" />
+      <input
+        type="radio"
+        id="smoothingMedium"
+        name="smoothing"
+        value="basic"
+        checked
+      />
       <label for="smoothingMedium"
         >Smoothed (note must be more consistent and held for longer)</label
       >
